--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: pytest conftest.py
-      - build:
+      - run:
           name: Build
           command: docker build . -t myapp:last
 # Invoke jobs via workflows
