--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,16 @@ jobs:
       - run:
           name: Build
           command: docker build . -t myapp:last
+      - run:
+          name: Tag Image
+          command: docker tag myapp:last 046573050373.dkr.ecr.eu-central-1.amazonaws.com/myhomegrownweb/myapp
+      - run:
+          name: Login to AWS
+          command: docker login --username AWS --password $ECRTOKEN 
+      - run:
+          name: Push image to AWS
+          command: docker push 046573050373.dkr.ecr.eu-central-1.amazonaws.com/myhomegrownweb/myapp
+
 workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
