--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           command: docker tag myapp:last 046573050373.dkr.ecr.eu-central-1.amazonaws.com/myhomegrownweb/myapp
       - run:
           name: Login to AWS
-          command: docker login --username AWS --password $ECRTOKEN 
+          command: docker login --username AWS --password $ECRTOKEN 046573050373.dkr.ecr.eu-central-1.amazonaws.com
       - run:
           name: Push image to AWS
           command: docker push 046573050373.dkr.ecr.eu-central-1.amazonaws.com/myhomegrownweb/myapp
